# MachineLearningMastery

01_AttentionMechanism/: main.py  pyproject.toml
02_SimpleRNNWithKeras/: .gitignore  main.py  pyproject.toml
03_AddingAttentionLayer/: main.py  pyproject.toml  utils.py
