[tool.poetry]
name = "03-addingattentionlayer"
version = "0.1.0"
description = ""
authors = ["velo.yamigiku <velo.yamigiku@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.18.0"
nvidia-cudnn-cu12 = "^9.6.0.74"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
numpy = "2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
